plugins {
	id 'fabric-loom'
	id 'maven-publish'
}

/*loom {
	accessWidenerPath = file("src/main/resources/keybound.accesswidener")
}*/

version = project.mod_version
group = project.maven_group
compileJava.options.encoding = 'UTF-8'

base {
	archivesName = project.mod_id + '-' + project.minecraft_version
}

repositories {
	// Add repositories to retrieve artifacts from in here.
	// You should only use this when depending on other mods because
	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
	// for more information about repositories.
	maven {
		url = 'https://jitpack.io' // New home of MaLiLib apparently
	}
	// maven {
	// 	url = "https://masa.dy.fi/maven"
	// }
	// maven {
	// 	url 'https://www.cursemaven.com'
	// }
}

dependencies {
	// To change the versions see the gradle.properties file
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

	// Fabric API. This is technically optional, but you probably want it anyway.
	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"
	include(implementation(annotationProcessor("io.github.llamalad7:mixinextras-fabric:0.4.1")))

	//modImplementation "fi.dy.masa.malilib:malilib-fabric-${project.minecraft_version_out}:${project.malilib_version}"
	modImplementation "com.github.sakura-ryoko:malilib:${project.malilib_version}"
}

// These get passed to src/main/java/resources/fabric.mod.json
processResources {
	filesMatching("fabric.mod.json") {
		def valueMap = [
			"mod_id"			: project.mod_id,
			"mod_name"			: project.mod_name,
			"mod_version"		: project.mod_version,
			"loader_version"	: project.loader_version,
			"minecraft_version" : project.minecraft_version,
		]
		expand valueMap
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 21
}

java {
	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task if it is present.
	// If you remove this line, sources will not be generated.
	//withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
}

jar {
	inputs.property "archivesName", project.base.archivesName

	from("LICENSE") {
		rename { "${it}_${inputs.properties.archivesName}"}
	}
}

// configure the maven publication
publishing {
	publications {
		create("mavenJava", MavenPublication) {
			artifactId = project.base.archivesName
			from components.java
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		// Add repositories to publish to here.
		// Notice: This block does NOT have the same function as the block in the top level.
		// The repositories here will be used for publishing your artifact, not for
		// retrieving dependencies.
	}
}